--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(4IBD_Bomberman)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(bomberman main.cpp ai/AI.h game_engine/GameEngine.h game_engine/GameEngine.cpp)
+add_executable(bomberman main.cpp ai/AI.h game_engine/GameEngine.h game_engine/GameEngine.cpp ai/AI.cpp)
